# LinuxServerTest

./: .gitignore  CMakeLists.txt  README.md  http-api-spec.yaml  main.cpp  p2.md
HTTPServer/: IPCProtocol.proto  http-api-spec.yaml  index.js  package-lock.json  package.json
HTTPServer/config/: mysqlClient.js  redisClient.js
HTTPServer/database/: redis_keys.md  schema.sql
HTTPServer/ipc/: ipcManager.js
HTTPServer/routes/: auth.js  match.js
HTTPServer/utils/: redisKeys.js  response.js
IPCProtocol/: IPCProtocol.proto  compileProto.sh
IPCProtocol/Compiled/: IPCProtocol.pb.h
src/: EnvSetter.cpp  EnvSetter.h  GlobalVariable.cpp  GlobalVariable.h  HTTPserver.cpp  HTTPserver.h  IOTask.cpp  IOTask.h  IPCSocket.cpp  IPCSocket.h  IPCSocketWrapper.cpp  IPCSocketWrapper.h  IoUringWrapper.cpp  IoUringWrapper.h  NetAddress.h  ObjectPool.h  PacketHandler.cpp  PacketHandler.h  RecvBuffer.cpp  RecvBuffer.h  RedisController.cpp  RedisController.h  RedisHandler.cpp  RedisHandler.h  S2HPacketHandler.cpp  S2HPacketHandler.h  S2HPacketMaker.h  SendBuffer.cpp  SendBuffer.h  SocketWrapper.cpp  SocketWrapper.h  main.cpp  sample.h
src/DedicateProcess/: DediManager.cpp  DediManager.h  DediServerService.h  DediSessions.cpp  DediSessions.h  DedicateMain.cpp  DedicateMain.h  GameRoom.h  MatchMaker.cpp  Matchmaker.cpp  Matchmaker.h  Player.h  UDPTask.cpp  UDPTask.h
src/Matchmaker/: MatchMaker.h  Matchmaker.cpp  Matchmaker.h
src/TestCode/: ChildProcessTest.cpp  ChildProcessTest.h  LobbyServerService.cpp  LobbyServerService.h  LobbySession.cpp  LobbySession.h  MultiThreadTest.cpp  MultiThreadTest.h  NetAddress.cpp  NetAddress.h  TestCode.h  ThreadLocal.cpp  ThreadLocal.h
